# src/dto/import-template-file.dto.ts
@@ -1,12 +1,0 @@
-import { ApiPropertyOptional } from "@nestjs/swagger";
-import { IsOptional, IsString } from "class-validator";
-
-export class ImportTemplateFileDto {
-  @ApiPropertyOptional({
-    description: "Nome del template (opzionale)",
-    example: "Template importato",
-  })
-  @IsOptional()
-  @IsString()
-  name?: string;
-}
